@@ -1,3 +1,10 @@
+2001-07-18  Ross Johnson  <rpj@setup1.ise.canberra.edu.au>
+
+	* mutex.c (pthread_mutexattr_init): Return ENOMEM
+	immediately and don't dereference the NULL pointer
+	if calloc fails.
+	- "Scott McCaskill" <scott@magruder.org>
+
 2001-07-10  Ross Johnson  <rpj@setup1.ise.canberra.edu.au>
 
 	* barrier.c: Still more revamping. The exclusive access
